Fix sidebar overflowing on mobile

--- a/src/scss/base/_global.scss
+++ b/src/scss/base/_global.scss
@@ -2,10 +2,16 @@
 @use "../abstracts/variables" as *;
 @use "../abstracts/mixins" as *;
 
+html,
 body {
+  height: 100%;
+  overflow-x: hidden;
+}
+
+body {
+  position: relative;
   font-family: $font-sans-serif;
   color: #333;
-  overflow-x: hidden;
 }
 
 img,
