--- a/src/scss/partials/_sidebar.scss
+++ b/src/scss/partials/_sidebar.scss
@@ -2,7 +2,7 @@
 @use "../abstracts/variables" as *;
 @use "../abstracts/mixins" as *;
 
-aside {
+.sidebar {
   position: absolute;
   right: 0;
   top: 0;
@@ -36,7 +36,6 @@ aside {
     width: 100dvw;
     height: 100dvh;
     transition: all 0.4s ease;
-    // pointer-events: none;
 
     .wrapper {
       position: absolute;
@@ -47,7 +46,7 @@ aside {
       flex-direction: column;
       justify-content: space-between;
       padding: 5rem 2rem 2rem 2rem;
-      width: 100%;
+      width: 80%;
       height: 100%;
       background-color: #fff;
       transition: all 0.4s ease;
@@ -96,6 +95,12 @@ aside {
       @include sm {
         justify-content: start;
       }
+      @include md {
+        width: 35%;
+      }
+      @include xxl {
+        width: 20%;
+      }
     }
   }
 
@@ -107,35 +112,21 @@ aside {
     .underlay {
       background-color: rgba(0, 0, 0, 0.5);
       backdrop-filter: blur(3px);
-    }
 
-    .wrapper {
-      width: 80%;
-      transform: translateX(0);
-
-      @include md {
-        width: 35%;
-      }
-      @include xxl {
-        width: 20%;
+      .wrapper {
+        transform: translateX(0);
       }
     }
   }
-  &.closed {
-    .header {
-      color: #fff;
-    }
 
+  &.closed {
     .underlay {
-      pointer-events: none;
-      z-index: -10;
       background-color: rgba(0, 0, 0, 0);
       backdrop-filter: blur(0);
-    }
 
-    .wrapper {
-      width: 0;
-      transform: translateX(100%);
+      .wrapper {
+        transform: translateX(100%);
+      }
     }
   }
 }
